# TransactionDB

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  admin-dashboard.html  tdb.pc.in
apple/: Info.plist.in  README.md  TransactionDB.h  build-xcframework.sh
apple/examples/objc/: UsageC.m
apple/examples/objcpp/: UsageCxx.mm
apple/examples/swift/: UsageC.swift  UsageCxx.swift
cli/: shell.c
cmake/: AppleFramework.cmake  CompilerWarnings.cmake  FetchLua.cmake  FetchZstd.cmake  FindLLVMOpt.cmake  tdb-config.cmake.in
docs/: JIT.md  README.md  ROADMAP_V2.md  SQL_COMPATIBILITY.md  api-reference.md  architecture.md  cli-reference.md  getting-started.md  index.html  plsql-guide.md  sql-reference.md
examples/: erp_sample.sql  tdb_plugin_example.cpp
include/: transactiondb.h  transactiondb.hpp
include/tdb/: bptree.h  btree.h  buffer.h  catalog.h  config.h  config.h.in  crypto.h  database.h  dbfile.h  docquery.h  error.h  hash_index.h  jit.h  jsengine.h  log.h  migrate.h  page.h  persistence.h  rptree.h  rtree.h  script.h  storage.h  threadsafe.h  tuple.h  txn.h  types.h  version_object.h  wal.h
include/tdb/sql/: ast.h  executor.h  lexer.h  optimizer.h  parser.h  token.h  typecoerce.h
manager/: app.js  index.html  style.css
src/: tdb.cpp
src/api/: tdb_api.c  tdb_db.h  tdb_env.c  tdb_env.h
src/catalog/: catalog.cpp  tdb_acl.c  tdb_acl.h  tdb_catalog.c  tdb_catalog.h  tdb_schema.c  tdb_schema.h
src/cli/: tdbcli.cpp  tui_shell.cpp
src/common/: tdb_buf.c  tdb_buf.h  tdb_internal.h  tdb_mem.c  tdb_mem.h  tdb_mutex.c  tdb_mutex.h  tdb_status.c  tdb_util.c  tdb_util.h
src/core/buffer/: buffer.c
src/core/page/: page.c
src/core/storage/: storage.c
src/core/wal/: wal.c
src/crypto/: crypto.c
src/dbfile/: dbfile.cpp  dbfile_v1.cpp  dbfile_v2.cpp
src/doc/: docquery.cpp
src/ext/: tdb_crypto.c  tdb_crypto.h
src/index/bptree/: bptree.c
src/index/btree/: btree.c
src/index/hash/: hash_index.c
src/index/rptree/: rptree.c
src/index/rtree/: rtree.c
src/jit/: tdb_jit.c  tdb_jit.h  tdb_jit_int.h  tdb_jit_ir.c  tdb_jit_lua.c  tdb_jit_sql.c  tdb_jit_xpath.c  tdb_jit_xquery.c
src/lua/: tdb_lua.c  tdb_lua.h
src/objc/: CMakeLists.txt  TDB.h  TDBCrypto.h  TDBCrypto.mm  TDBDatabase.h  TDBDatabase.mm  TDBKeychain.h  TDBKeychain.mm  TDBResultSet.h  TDBResultSet.mm  TDBTypes.h  TDBValue.h  TDBValue.mm  module.modulemap
src/persistence/: persistence.cpp
src/plsql/: tdb_plsql.h  tdb_plsql_int.h  tdb_plsql_interp.c  tdb_plsql_llvm.c  tdb_plsql_parse.c
src/script/: script_engine.cpp
src/script/jit/: ir_emitter.cpp  ir_emitter.h  lua_jit.cpp  trampolines.cpp  trampolines.h
src/script/js/: jsengine.mm
src/sql/: tdb_analyze.c  tdb_analyze.h  tdb_ast.c  tdb_ast.h  tdb_exec.c  tdb_exec_dml.inc  tdb_exec_funcs.inc  tdb_exec_select.inc  tdb_exec_stream.inc  tdb_lexer.c  tdb_lexer.h  tdb_parser.c  tdb_parser.h  tdb_token.h
src/sql/ast/: ast.cpp
src/sql/executor/: executor.cpp
src/sql/lexer/: lexer.cpp
src/sql/optimizer/: optimizer.cpp
src/sql/parser/: parser.cpp
src/sql/typecoerce/: typecoerce.cpp
src/storage/: engine_col.c  engine_row.c  tdb_btree.c  tdb_btree.h  tdb_compress.c  tdb_compress.h  tdb_engine.c  tdb_file.c  tdb_file.h  tdb_format.h  tdb_pager.c  tdb_pager.h  tdb_rtree.c  tdb_rtree.h  tdb_storage.h  tdb_wal.c  tdb_wal.h  tuple.cpp
src/txn/: tdb_lock.c  tdb_lock.h  tdb_mvcc.c  tdb_mvcc.h  tdb_txn.c  tdb_txn.h  txn.c
src/util/: error.c  hash.c  log.c  migrate.cpp  threadsafe.cpp
src/value/: tdb_geom.c  tdb_geom.h  tdb_record.c  tdb_record.h  tdb_sqltype.c  tdb_sqltype.h  tdb_type.c  tdb_type.h  tdb_value.c  tdb_value.h
tests/: CMakeLists.txt  tdb_test.h  test_btree.c  test_catalog.c  test_composite.c  test_compress.c  test_concurrency.c  test_cpp.cpp  test_crypto.c  test_engine.c  test_exec.c  test_geom.c  test_jit.c  test_keywords.c  test_lexer.c  test_lock.c  test_lua.c  test_mvcc.c  test_pager.c  test_parser.c  test_plsql.c  test_routines.c  test_rtree.c  test_schema.c  test_sqlite_compat.c  test_sqltype.c  test_util.c  test_value_record.c  test_wal.c
tests/catalog/: test_catalog.cpp
tests/core/: test_buffer.cpp  test_crypto.cpp  test_storage.cpp  test_wal.cpp
tests/database/: test_smoke.cpp
tests/harness/: tdb_test.h
tests/index/: test_bptree.cpp  test_hash.cpp
tests/script/: test_lua.cpp
tests/sql/: test_executor.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp
